Version 0.4
===========
- Reorganisation of the project structure
- some code cleanup
- restructured the way pending property changes are handled. 

Version 0.3
===========

- some code cleanup
- moved more classes to the CLDC base layer
- fixed audio format conversion
- bugfix: clip outputstream is able to play multiple audio outputs
- bugfix: clip outputstream can be canceled
- recognizer defines the engine's audio format
- started to work on a SAPI layer
- started to work on a mac layer
- bugfix: root rule is set correctly after all other changes have been committed
- bugfix: QUEUE_EMPTY was not set in synthesizer after an allocate
- bugfix: state2String did not consider the FOCUSED and DEFOCUSED states

Version 0.2
============

- new RTP demo
- started separation of the core classes into a common CLDC jar
- some code cleanup
- enhanced javadoc
- added protocol handlers for playback and capture


Version 0.1
===========

- First release.
